Added Join page, Favicon, Phone and Tablet support

--- a/join/index.html
+++ b/join/index.html
@@ -23,27 +23,34 @@
 
 				<div class="col-md-6 col-xs-12" id="nav-container">
 					<ul class="nav nav-pills">
-						<li class="active"><a href="/">Home</a></li>
+						<li><a href="/">Home</a></li>
 						<li><a href="/raidteam">Raid Team</a></li>
-						<li><a href="/join">Join</a></li>
+						<li class="active"><a href="/join">Join</a></li>
 						<li><a href="/contact">Contact</a></li>
 					</ul>
-
 				</div>
 			</div>
 
 			<div class="row" id="content">
-				<div class="col-md-5 col-xs-12" id="about-us-container">
+				<div class="col-md-6 col-md-push-3 col-sm-12" id="join-us-container">
 					<div class="text-box">
-						<h1 class="text-center">About Us</h1>
-						<p class="text-justify">Fluffy Kitties is a guild that was established in 2014 with hopes of bringing in new and experienced players alike and giving them a community where connections and life long friendships could be made.</p>
-
-						<p class="text-justify">Within the guild, Fluffy Kitties has also established a semi-hardcore raiding team currently progressing in Mythic HFC. A Heroic team is also beginning to form.</p>
-
-						<p class="text-justify">So whether you're looking to make new friends to grind achievements with, join our Mythic/Heroic raiding team, or even form a group for some RBGS and CM dungeons, Fluffy Kitties welcomes you.</p>
+						<h1 class="text-center">Join Us</h1>
+						<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce at cursus nunc, ac porta felis. Suspendisse mattis ut metus sit amet rutrum. Maecenas ut lorem consequat, aliquam arcu a, cursus odio. Pellentesque non faucibus diam, non pellentesque orci. Aliquam libero ligula, finibus ac egestas ut, accumsan at ligula. Vestibulum at condimentum libero, sit amet cursus nisi. Phasellus sed ligula neque. Sed tempus mauris ac tellus varius euismod.</p>
 					</div>
 				</div>
-				<div class="col-md-7 col-xs-12" id="about-us-image-container">
+				<div class="col-md-3 col-md-pull-6 col-sm-6 openings-container" id="mythic-openings-container">
+					<div class="table-responsive table-box">
+						<h1 class="text-center">Mythic Openings:</h1>
+						<table class="table table-striped" id="mythic-table">
+						</table>
+					</div>
+				</div>
+				<div class="col-md-3 col-sm-6 openings-container" id="heroic-openings-container">
+					<div class="table-responsive table-box">
+						<h1 class="text-center">Heroic Openings:</h1>
+						<table class="table table-striped" id="heroic-table">
+						</table>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -51,5 +58,6 @@
 		
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="/js/fluffykitties.js"></script>
+	<script src="/js/joinus.js"></script>
 	</body>
 </html>
