--- a/raidteam/index.html
+++ b/raidteam/index.html
@@ -4,16 +4,19 @@
 		<title>Fluffy Kitties</title>
 
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-		<link href="../styles/style.css" rel="stylesheet">
-
+		<link href="/styles/style.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet" type="text/css">
+
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
 
 		<div class="container">
 			<div class="row" id="header">
-				<div class="col-md-6 col-xs-12" id="guild-text-container">
-					<a href="/"><img src="../images/logo.png"></a>
+				<div class="col-md-2 col-xs-12" id="guild-logo-container">
+					<a href="/"><img src="/images/logo.png"></a>
+				</div>
+				<div class="col-md-4 col-xs-12" id="guild-text-container">
 					<div id="guild-name">Fluffy Kitties</div>
 					<div id="guild-progress">Alliance Darkspear-US <span id="guild-progress-number"></span>/13M</div>
 				</div>
@@ -35,7 +38,7 @@
 				</div>
 				<div class="container" id="fullscreen-container">
 					<div class="row" id="fullscreen-sub-container">
-						<div class="col-md-3" id="fullscreen-description-container">
+						<div class="col-md-3 col-xs-12" id="fullscreen-description-container">
 
 							<h1 id="fullscreen-member-name"></h1>
 							<p class="text-justify" id="fullscreen-text-description"></p>
@@ -44,7 +47,7 @@
 							</div>
 
 						</div>
-						<div class="col-md-9" id="fullscreen-image-container">
+						<div class="col-md-9 col-xs-12" id="fullscreen-image-container">
 							<img id="fullscreen-image">
 						</div>
 					</div>
@@ -54,7 +57,7 @@
 
 		
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-	<script src="../js/fluffykitties.js"></script>
-	<script src="../js/guildmembers.js"></script>
+	<script src="/js/fluffykitties.js"></script>
+	<script src="/js/guildmembers.js"></script>
 	</body>
 </html>
