--- a/raidteam/index.html
+++ b/raidteam/index.html
@@ -24,9 +24,9 @@
 				<div class="col-md-6 col-xs-12" id="nav-container">
 					<ul class="nav nav-pills">
 						<li><a href="/">Home</a></li>
-						<li class="active"><a href="/raidteam">Raid Team</a></li>
-						<li><a href="/join">Join</a></li>
-						<li><a href="/contact">Contact</a></li>
+						<li class="active"><a href="/raidteam/">Raid Team</a></li>
+						<li><a href="/join/">Join</a></li>
+						<li><a href="/contact/">Contact</a></li>
 					</ul>
 				</div>
 			</div>
