--- a/raidteam/index.html
+++ b/raidteam/index.html
@@ -14,7 +14,7 @@
 		<div class="container">
 			<div class="row" id="header">
 				<div class="col-md-2 col-xs-12" id="guild-logo-container">
-					<a href="/"><img src="/images/logo.png"></a>
+					<a href="/"><img class="img-responsive" src="/images/logo.png"></a>
 				</div>
 				<div class="col-md-4 col-xs-12" id="guild-text-container">
 					<div id="guild-name">Fluffy Kitties</div>
