--- a/contact/index.html
+++ b/contact/index.html
@@ -32,8 +32,7 @@
 			</div>
 
 			<div class="row" id="content">
-
-				<div class="col-md-8 col-md-offset-2" id="contact-us-container">
+				<div class="col-md-7" id="contact-us-container">
 					<div class="row" id="contact-us-thumbnail-container">
 						<h1 class="text-center">Contact Us</h1>
 						<div class="col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
@@ -43,63 +42,67 @@
 									<div class="contact-info-sub-container">
 										<div class="contact-name">Eliyya</div>
 										<div class="contact-rank">GM</div>
-										<div class="contact-realid">FunCats#4444</div>
+										<div class="contact-realid">PrplMunkys#1442</div>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-lg-4 col-lg-offset-2 col-md-6 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
 							<div class="thumbnail contact-info-portrait">
-								<img class="guild-member-portrait" src="/images/raidteam/portrait_Eliyya.png">
-								<div class="contact-info-container hunter-bg-color">
+								<img class="guild-member-portrait" src="/images/raidteam/portrait_J&#248;hansen.png">
+								<div class="contact-info-container paladin-bg-color">
 									<div class="contact-info-sub-container">
-										<div class="contact-name">Eliyya</div>
-										<div class="contact-rank">GM</div>
-										<div class="contact-realid">FunCats#4444</div>
+										<div class="contact-name">J&#248;hansen</div>
+										<div class="contact-rank">RL Snuggle Butt</div>
+										<div class="contact-realid">Johansen#1229</div>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-lg-4 col-lg-offset-0 col-md-6 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
 							<div class="thumbnail contact-info-portrait">
-								<img class="guild-member-portrait" src="/images/raidteam/portrait_Eliyya.png">
-								<div class="contact-info-container hunter-bg-color">
+								<img class="guild-member-portrait" src="/images/raidteam/portrait_Carpath&#237;a.png">
+								<div class="contact-info-container rogue-bg-color">
 									<div class="contact-info-sub-container">
-										<div class="contact-name">Eliyya</div>
-										<div class="contact-rank">GM</div>
-										<div class="contact-realid">FunCats#4444</div>
+										<div class="contact-name">Carpath&#237;a</div>
+										<div class="contact-rank">Snuggle Butt</div>
+										<div class="contact-realid">NovemberRain#1436
+</div>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-lg-4 col-lg-offset-2 col-md-6 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
 							<div class="thumbnail contact-info-portrait">
-								<img class="guild-member-portrait" src="/images/raidteam/portrait_Eliyya.png">
+								<img class="guild-member-portrait" src="/images/raidteam/portrait_Rockstarsyn.png">
 								<div class="contact-info-container hunter-bg-color">
 									<div class="contact-info-sub-container">
-										<div class="contact-name">Eliyya</div>
-										<div class="contact-rank">GM</div>
-										<div class="contact-realid">FunCats#4444</div>
+										<div class="contact-name">Rockstarsyn</div>
+										<div class="contact-rank">Snuggle Butt</div>
+										<div class="contact-realid">Rockstarsyn#1216
+</div>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-lg-4 col-lg-offset-0 col-md-6 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
 							<div class="thumbnail contact-info-portrait">
-								<img class="guild-member-portrait" src="/images/raidteam/portrait_Eliyya.png">
-								<div class="contact-info-container hunter-bg-color">
+								<img class="guild-member-portrait" src="/images/raidteam/portrait_Thepurple.png">
+								<div class="contact-info-container priest-bg-color">
 									<div class="contact-info-sub-container">
-										<div class="contact-name">Eliyya</div>
-										<div class="contact-rank">GM</div>
-										<div class="contact-realid">FunCats#4444</div>
+										<div class="contact-name">Thepurple</div>
+										<div class="contact-rank">Snuggle Butt</div>
+										<div class="contact-realid">TheColor#1742
+</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
+                <div class="col-md-5 text-box">
+                </div>
 			</div>
-
 		</div>
 
 		
