Added footer and additional raider images

--- a/index.html
+++ b/index.html
@@ -10,45 +10,46 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
+		<div class="wrapper">
+			<div class="container">
+				<div class="row" id="header">
+					<div class="col-md-2 col-xs-12" id="guild-logo-container">
+						<a href="/"><img class="img-responsive" src="/images/logo.png"></a>
+					</div>
+					<div class="col-md-4 col-xs-12" id="guild-text-container">
+						<div id="guild-name">Fluffy Kitties</div>
+						<div id="guild-progress">Alliance Darkspear-US <span id="guild-progress-number"></span>/13M</div>
+					</div>
 
-		<div class="container">
-			<div class="row" id="header">
-				<div class="col-md-2 col-xs-12" id="guild-logo-container">
-					<a href="/"><img class="img-responsive" src="/images/logo.png"></a>
-				</div>
-				<div class="col-md-4 col-xs-12" id="guild-text-container">
-					<div id="guild-name">Fluffy Kitties</div>
-					<div id="guild-progress">Alliance Darkspear-US <span id="guild-progress-number"></span>/13M</div>
-				</div>
+					<div class="col-md-6 col-xs-12" id="nav-container">
+						<ul class="nav nav-pills">
+							<li class="active"><a href="/">Home</a></li>
+							<li><a href="/raidteam/">Raid Team</a></li>
+							<li><a href="/join/">Join</a></li>
+							<li><a href="/contact/">Contact</a></li>
+						</ul>
 
-				<div class="col-md-6 col-xs-12" id="nav-container">
-					<ul class="nav nav-pills">
-						<li class="active"><a href="/">Home</a></li>
-						<li><a href="/raidteam/">Raid Team</a></li>
-						<li><a href="/join/">Join</a></li>
-						<li><a href="/contact/">Contact</a></li>
-					</ul>
-
-				</div>
-			</div>
-
-			<div class="row" id="content">
-				<div class="col-md-5 col-xs-12" id="about-us-container">
-					<div class="text-box">
-						<h1 class="text-center">About Us</h1>
-						<p class="text-justify">Fluffy Kitties is a guild that was established in 2014 with hopes of bringing in new and experienced players alike and giving them a community where connections and life long friendships could be made.</p>
-
-						<p class="text-justify">Within the guild, Fluffy Kitties has also established a semi-hardcore raiding team currently progressing in Mythic HFC. A Heroic team is also beginning to form.</p>
-
-						<p class="text-justify">So whether you're looking to make new friends to grind achievements with, join our Mythic/Heroic raiding team, or even form a group for some RBGS and CM dungeons, Fluffy Kitties welcomes you.</p>
 					</div>
 				</div>
-				<div class="col-md-7 col-xs-12" id="about-us-image-container">
+
+				<div class="row" id="content">
+					<div class="col-md-5 col-xs-12" id="about-us-container">
+						<div class="text-box">
+							<h1 class="text-center">About Us</h1>
+							<p class="text-justify">Fluffy Kitties is a guild that was established in 2014 with hopes of giving both new and experienced players alike, a community where connections and lifelong friendships could be made.</p>
+							<p class="text-justify">Within the guild, Fluffy Kitties has established a semi-hardcore raiding team currently progressing through Mythic HFC and another team progressing through Heroic HFC.</p>
+							<p class="text-justify">So whether you're looking to make some new friends to grind achievements with, join our Mythic/Heroic raiding team, or even looking to form groups for some RBGS and CM dungeons, Fluffy Kitties welcomes you!</p>
+						</div>
+					</div>
+					<div class="col-md-7 col-xs-12" id="about-us-image-container">
+					</div>
 				</div>
 			</div>
-		</div>
 
-		
+			<footer>
+			<a href="/phpmumbleadmin/">Admin</a>
+			</footer>
+		</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="/js/fluffykitties.js"></script>
 	</body>
