--- a/contact/index.html
+++ b/contact/index.html
@@ -10,102 +10,102 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
+		<div class="wrapper">
+			<div class="container">
+				<div class="row" id="header">
+					<div class="col-md-2 col-xs-12" id="guild-logo-container">
+						<a href="/"><img class="img-responsive" src="/images/logo.png"></a>
+					</div>
+					<div class="col-md-4 col-xs-12" id="guild-text-container">
+						<div id="guild-name">Fluffy Kitties</div>
+						<div id="guild-progress">Alliance Darkspear-US <span id="guild-progress-number"></span>/13M</div>
+					</div>
 
-		<div class="container">
-			<div class="row" id="header">
-				<div class="col-md-2 col-xs-12" id="guild-logo-container">
-					<a href="/"><img class="img-responsive" src="/images/logo.png"></a>
-				</div>
-				<div class="col-md-4 col-xs-12" id="guild-text-container">
-					<div id="guild-name">Fluffy Kitties</div>
-					<div id="guild-progress">Alliance Darkspear-US <span id="guild-progress-number"></span>/13M</div>
+					<div class="col-md-6 col-xs-12" id="nav-container">
+						<ul class="nav nav-pills">
+							<li><a href="/">Home</a></li>
+							<li><a href="/raidteam/">Raid Team</a></li>
+							<li><a href="/join/">Join</a></li>
+							<li class="active"><a href="/contact/">Contact</a></li>
+						</ul>
+					</div>
 				</div>
 
-				<div class="col-md-6 col-xs-12" id="nav-container">
-					<ul class="nav nav-pills">
-						<li><a href="/">Home</a></li>
-						<li><a href="/raidteam/">Raid Team</a></li>
-						<li><a href="/join/">Join</a></li>
-						<li class="active"><a href="/contact/">Contact</a></li>
-					</ul>
-				</div>
-			</div>
-
-			<div class="row" id="content">
-				<div class="col-md-7" id="contact-us-container">
-					<div class="row" id="contact-us-thumbnail-container">
-						<h1 class="text-center">Contact Us</h1>
-						<div class="col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
-							<div class="thumbnail contact-info-portrait">
-								<img class="guild-member-portrait" src="/images/raidteam/portrait_Eliyya.png">
-								<div class="contact-info-container hunter-bg-color">
-									<div class="contact-info-sub-container">
-										<div class="contact-name">Eliyya</div>
-										<div class="contact-rank">GM</div>
-										<div class="contact-realid">PrplMunkys#1442</div>
+				<div class="row" id="content">
+					<div class="col-md-7" id="contact-us-container">
+						<div class="row" id="contact-us-thumbnail-container">
+							<h1 class="text-center">Contact Us</h1>
+							<div class="col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
+								<div class="thumbnail contact-info-portrait">
+									<img class="guild-member-portrait" src="/images/raidteam/portrait_Eliyya.png">
+									<div class="contact-info-container hunter-bg-color">
+										<div class="contact-info-sub-container">
+											<div class="contact-name">Eliyya</div>
+											<div class="contact-rank">GM</div>
+											<div class="contact-realid">PrplMunkys#1442</div>
+										</div>
 									</div>
 								</div>
 							</div>
-						</div>
-						<div class="col-lg-4 col-lg-offset-2 col-md-6 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-							<div class="thumbnail contact-info-portrait">
-								<img class="guild-member-portrait" src="/images/raidteam/portrait_J&#248;hansen.png">
-								<div class="contact-info-container paladin-bg-color">
-									<div class="contact-info-sub-container">
-										<div class="contact-name">J&#248;hansen</div>
-										<div class="contact-rank">RL Snuggle Butt</div>
-										<div class="contact-realid">Johansen#1229</div>
+							<div class="col-lg-4 col-lg-offset-2 col-md-6 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+								<div class="thumbnail contact-info-portrait">
+									<img class="guild-member-portrait" src="/images/raidteam/portrait_J&#248;hansen.png">
+									<div class="contact-info-container paladin-bg-color">
+										<div class="contact-info-sub-container">
+											<div class="contact-name">J&#248;hansen</div>
+											<div class="contact-rank">RL Snuggle Butt</div>
+											<div class="contact-realid">Johansen#1229</div>
+										</div>
 									</div>
 								</div>
 							</div>
-						</div>
-						<div class="col-lg-4 col-lg-offset-0 col-md-6 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-							<div class="thumbnail contact-info-portrait">
-								<img class="guild-member-portrait" src="/images/raidteam/portrait_Carpath&#237;a.png">
-								<div class="contact-info-container rogue-bg-color">
-									<div class="contact-info-sub-container">
-										<div class="contact-name">Carpath&#237;a</div>
-										<div class="contact-rank">Snuggle Butt</div>
-										<div class="contact-realid">NovemberRain#1436
-</div>
+							<div class="col-lg-4 col-lg-offset-0 col-md-6 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+								<div class="thumbnail contact-info-portrait">
+									<img class="guild-member-portrait" src="/images/raidteam/portrait_Carpath&#237;a.png">
+									<div class="contact-info-container rogue-bg-color">
+										<div class="contact-info-sub-container">
+											<div class="contact-name">Carpath&#237;a</div>
+											<div class="contact-rank">Snuggle Butt</div>
+											<div class="contact-realid">NovemberRain#1436</div>
+										</div>
 									</div>
 								</div>
 							</div>
-						</div>
-						<div class="col-lg-4 col-lg-offset-2 col-md-6 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-							<div class="thumbnail contact-info-portrait">
-								<img class="guild-member-portrait" src="/images/raidteam/portrait_Rockstarsyn.png">
-								<div class="contact-info-container hunter-bg-color">
-									<div class="contact-info-sub-container">
-										<div class="contact-name">Rockstarsyn</div>
-										<div class="contact-rank">Snuggle Butt</div>
-										<div class="contact-realid">Rockstarsyn#1216
-</div>
+							<div class="col-lg-4 col-lg-offset-2 col-md-6 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+								<div class="thumbnail contact-info-portrait">
+									<img class="guild-member-portrait" src="/images/raidteam/portrait_Rockstarsyn.png">
+									<div class="contact-info-container hunter-bg-color">
+										<div class="contact-info-sub-container">
+											<div class="contact-name">Rockstarsyn</div>
+											<div class="contact-rank">Snuggle Butt</div>
+											<div class="contact-realid">Rockstarsyn#1216</div>
+										</div>
 									</div>
 								</div>
 							</div>
-						</div>
-						<div class="col-lg-4 col-lg-offset-0 col-md-6 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-							<div class="thumbnail contact-info-portrait">
-								<img class="guild-member-portrait" src="/images/raidteam/portrait_Thepurple.png">
-								<div class="contact-info-container priest-bg-color">
-									<div class="contact-info-sub-container">
-										<div class="contact-name">Thepurple</div>
-										<div class="contact-rank">Snuggle Butt</div>
-										<div class="contact-realid">TheColor#1742
-</div>
+							<div class="col-lg-4 col-lg-offset-0 col-md-6 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+								<div class="thumbnail contact-info-portrait">
+									<img class="guild-member-portrait" src="/images/raidteam/portrait_Thepurple.png">
+									<div class="contact-info-container priest-bg-color">
+										<div class="contact-info-sub-container">
+											<div class="contact-name">Thepurple</div>
+											<div class="contact-rank">Snuggle Butt</div>
+											<div class="contact-realid">TheColor#1742</div>
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
+	                <div class="col-md-5 text-box">
+	                </div>
 				</div>
-                <div class="col-md-5 text-box">
-                </div>
 			</div>
-		</div>
 
-		
+			<footer>
+			<a href="/phpmumbleadmin/">Admin</a>
+			</footer>
+		</div>	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="/js/fluffykitties.js"></script>
 	<script src="/js/contact.js"></script>
