Added additional images and Social Media integration

--- a/contact/index.html
+++ b/contact/index.html
@@ -35,6 +35,7 @@
 					<div class="col-md-7" id="contact-us-container">
 						<div class="row" id="contact-us-thumbnail-container">
 							<h1 class="text-center">Contact Us</h1>
+							<hr>
 							<div class="col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
 								<div class="thumbnail contact-info-portrait">
 									<img class="guild-member-portrait" src="/images/raidteam/portrait_Eliyya.png">
@@ -97,13 +98,24 @@
 							</div>
 						</div>
 					</div>
-	                <div class="col-md-5 text-box">
+	                <div class="col-md-5 text-box" id="social-media-container">
+	                	<ul>
+	                		<li><a href="http://www.twitch.tv/turtlekiddy" target="_blank"><img src="/images/socialmedia/large/twitch.png">Twitch</a></li>
+	                		<li><a href="https://twitter.com/FluffyKittiesDS" target="_blank"><img src="/images/socialmedia/large/twitter.png">Twitter</a></li>
+	                		<li><a href="http://www.wowprogress.com/guild/us/darkspear/Fluffy+Kitties" target="_blank"><img src="/images/socialmedia/large/wowprogress.png">WoW Progress</a></li>
+	                	</ul>
 	                </div>
 				</div>
 			</div>
 
+			<div id="social-media-footer">
+                <a href="http://www.twitch.tv/turtlekiddy" target="_blank"><img src="/images/socialmedia/small/twitch.png"></a>
+                <a href="https://twitter.com/FluffyKittiesDS" target="_blank"><img src="/images/socialmedia/small/twitter.png"></a>
+                <a href="http://www.wowprogress.com/guild/us/darkspear/Fluffy+Kitties" target="_blank"><img src="/images/socialmedia/small/wowprogress.png"></a>
+            </div>
+
 			<footer>
-			<a href="/phpmumbleadmin/">Admin</a>
+				<a href="/phpmumbleadmin/">Admin</a>
 			</footer>
 		</div>	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
