--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 					<div class="col-md-5 col-xs-12" id="about-us-container">
 						<div class="text-box">
 							<h1 class="text-center">About Us</h1>
+							<hr>
 							<p class="text-justify">Fluffy Kitties is a guild that was established in 2014 with hopes of giving both new and experienced players alike, a community where connections and lifelong friendships could be made.</p>
 							<p class="text-justify">Within the guild, Fluffy Kitties has established a semi-hardcore raiding team currently progressing through Mythic HFC and another team progressing through Heroic HFC.</p>
 							<p class="text-justify">So whether you're looking to make some new friends to grind achievements with, join our Mythic/Heroic raiding team, or even looking to form groups for some RBGS and CM dungeons, Fluffy Kitties welcomes you!</p>
@@ -46,8 +47,14 @@
 				</div>
 			</div>
 
+			<div id="social-media-footer">
+                <a href="http://www.twitch.tv/turtlekiddy" target="_blank"><img src="/images/socialmedia/small/twitch.png"></a>
+                <a href="https://twitter.com/FluffyKittiesDS" target="_blank"><img src="/images/socialmedia/small/twitter.png"></a>
+                <a href="http://www.wowprogress.com/guild/us/darkspear/Fluffy+Kitties" target="_blank"><img src="/images/socialmedia/small/wowprogress.png"></a>
+            </div>
+
 			<footer>
-			<a href="/phpmumbleadmin/">Admin</a>
+				<a href="/phpmumbleadmin/">Admin</a>
 			</footer>
 		</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
