--- a/join/index.html
+++ b/join/index.html
@@ -34,8 +34,32 @@
 				<div class="row" id="content">
 					<div class="col-md-6 col-md-push-3 col-sm-12" id="join-us-container">
 						<div class="text-box">
-							<h1 class="text-center">Join Us</h1>
-							<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce at cursus nunc, ac porta felis. Suspendisse mattis ut metus sit amet rutrum. Maecenas ut lorem consequat, aliquam arcu a, cursus odio. Pellentesque non faucibus diam, non pellentesque orci. Aliquam libero ligula, finibus ac egestas ut, accumsan at ligula. Vestibulum at condimentum libero, sit amet cursus nisi. Phasellus sed ligula neque. Sed tempus mauris ac tellus varius euismod.</p>
+							<h1 class="text-center">Mythic</h1>
+							<p>
+								<u>Raid Days & Times:</u><br>
+								Tuesdays from 5pm - 7pm PST<br>
+								Sundays from 3pm - 7pm PST
+								<ul>
+									<li>RCLoot Council & Exorsus Raid Tools are required. Stat Weight Score will be required once invited to the guild to help with loot distribution. Mumble is also mandatory.</li>
+									<li>We begin forming 15 minutes prior to our raid times, the goal is to pull the boss right at start. We appreciate everyone being on time with your pots, flasks, addons and mumble ready to go.</li>
+									<li>Must show up to 4 consecutive runs in order to be offered an invitation to the guild and be eligible for tier/loot. Leaving early counts as a miss.</li>
+									<li>Must be in the guild in order to receive loot.</li>
+								</ul>
+							</p>
+							<hr>
+							<h1 class="text-center">Heroic</h1>
+							<p>
+								<u>Raid Days & Times:</u><br>
+								Thursdays from 5pm - 7pm PST<br>
+								Fridays from 5pm - 7pm PST
+								<ul>
+									<li>We begin forming 15 minutes prior to our raid times, the goal is to pull the boss right at start. We appreciate everyone being on time with your pots, flasks, addons and mumble ready to go.</li>
+									<li>Must show up to 4 consecutive runs in order to be offered an invitation to the guild and be eligible for tier/loot. Leaving early counts as a miss.</li>
+									<li>Must be in the guild in order to receive loot.</li>
+								</ul>
+								<br>
+								<h2 class="text-center">Interested? <a href="/contact/">Contact Us!</a></h2>
+							</p>
 						</div>
 					</div>
 					<div class="col-md-3 col-md-pull-6 col-sm-6 openings-container" id="mythic-openings-container">
@@ -55,8 +79,14 @@
 				</div>
 			</div>
 
+			<div id="social-media-footer">
+                <a href="http://www.twitch.tv/turtlekiddy" target="_blank"><img src="/images/socialmedia/small/twitch.png"></a>
+                <a href="https://twitter.com/FluffyKittiesDS" target="_blank"><img src="/images/socialmedia/small/twitter.png"></a>
+                <a href="http://www.wowprogress.com/guild/us/darkspear/Fluffy+Kitties" target="_blank"><img src="/images/socialmedia/small/wowprogress.png"></a>
+            </div>
+
 			<footer>
-			<a href="/phpmumbleadmin/">Admin</a>
+				<a href="/phpmumbleadmin/">Admin</a>
 			</footer>
 		</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
