--- a/raidteam/index.html
+++ b/raidteam/index.html
@@ -34,14 +34,15 @@
 				<div class="row" id="content">
 					<div class="row" id="raider-container">
 						<h1 class="text-center">Mythic Raid Team</h1>
-						<p class="text-justify">Fluffy Kitties is a guild that was established in 2014 with hopes of bringing in new and experienced players alike and giving them a community where connections and life long friendships could be made.</p>
+						<hr>
+						<p class="text-justify">To watch us raid every Tuesday and Sunday, check out <a target="_blank" href="http://twitch.tv/turtlekiddy">our Twitch</a>!</p>
 					</div>
 					<div class="container" id="fullscreen-container">
 						<div class="row" id="fullscreen-sub-container">
 							<div class="col-md-3 col-xs-12" id="fullscreen-description-container">
 
 								<h1 id="fullscreen-member-name"></h1>
-								<p class="text-justify" id="fullscreen-text-description"></p>
+								<p id="fullscreen-text-description"></p>
 								<div id="armory-button">
 									<a target="_blank" class="btn btn-link btn-xs btn-block">Armory</a>
 								</div>
@@ -55,11 +56,18 @@
 				</div>
 			</div>
 
+			<div id="social-media-footer">
+                <a href="http://www.twitch.tv/turtlekiddy" target="_blank"><img src="/images/socialmedia/small/twitch.png"></a>
+                <a href="https://twitter.com/FluffyKittiesDS" target="_blank"><img src="/images/socialmedia/small/twitter.png"></a>
+                <a href="http://www.wowprogress.com/guild/us/darkspear/Fluffy+Kitties" target="_blank"><img src="/images/socialmedia/small/wowprogress.png"></a>
+            </div>
+
 			<footer>
-			<a href="/phpmumbleadmin/">Admin</a>
+				<a href="/phpmumbleadmin/">Admin</a>
 			</footer>
 		</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.0.0/imagesloaded.pkgd.min.js"></script>
 	<script src="/js/fluffykitties.js"></script>
 	<script src="/js/guildmembers.js"></script>
 	</body>
