--- a/public_html/join/index.html
+++ b/public_html/join/index.html
@@ -34,44 +34,47 @@
 				<div class="row" id="content">
 					<div class="col-md-6 col-md-push-3 col-sm-12" id="join-us-container">
 						<div class="text-box">
-							<h1 class="text-center">Mythic</h1>
-							<p>
+							<h1 class="text-center">Join</h1>
+								<p>
 								<u>Raid Days & Times:</u><br>
-								Tuesdays from 5pm - 7pm PST<br>
-								Sundays from 3pm - 7pm PST
+									<b>9 Hour</b><br>
+									Tuesday through Thursday from 6 - 9pm PST<br>
+									<b>6 Hour</b><br>
+									Tuesday through Thursday from 6 - 8pm PST<br>
+								</p><br>
+								<p><u>Trial period:</u>&nbsp;&nbsp;2 weeks with 100% attendance.</p>
+
+								<p>Ideal candidates should meet these requirements:</p>
 								<ul>
-									<li>RCLoot Council & Exorsus Raid Tools are required. Stat Weight Score will be required once invited to the guild to help with loot distribution. Mumble is also mandatory.</li>
-									<li>We begin forming 15 minutes prior to our raid times, the goal is to pull the boss right at start. We appreciate everyone being on time with your pots, flasks, addons and mumble ready to go.</li>
-									<li>Must show up to 4 consecutive runs in order to be offered an invitation to the guild and be eligible for tier/loot. Leaving early counts as a miss.</li>
-									<li>Must be in the guild in order to receive loot.</li>
+									<li>Be able to obtain proper addons as well as understand how to use them.</li>
+									<li>Proper understanding of your class along with the ability to always try and improve.</li>
+									<li>Must have a positive attitude and ability to work with a team.</li>
+									<li>At least 90% attendance required during farm. During progression, several misses can result in your spot being filled.</li>
+									<li>Working mic and ability to use Mumble- client used for communicating during raids.</li>
 								</ul>
-							</p>
-							<hr>
-							<h1 class="text-center">Heroic</h1>
-							<p>
-								<u>Raid Days & Times:</u><br>
-								Thursdays from 5pm - 7pm PST<br>
-								Fridays from 5pm - 7pm PST
-								<ul>
-									<li>We begin forming 15 minutes prior to our raid times, the goal is to pull the boss right at start. We appreciate everyone being on time with your pots, flasks, addons and mumble ready to go.</li>
-									<li>Must show up to 4 consecutive runs in order to be offered an invitation to the guild and be eligible for tier/loot. Leaving early counts as a miss.</li>
-									<li>Must be in the guild in order to receive loot.</li>
-								</ul>
+								<h3 class="text-center"><b>Which team is best for you?</b></h3>
+
+								<p class="text-justify">While Fluffy Kitties just began semi-hardcore raiding during the middle of HFC, raiding only 6 hours a week, we would like to kick it up and start off stronger than ever for Legion.</p>
+
+								<p class="text-justify">The level of time and commitment you have to offer will determine which team you are better suited for.</p>
+
+								<p class="text-justify">The 9 hour team will push harder and faster, while the 6 hour team will continue to push just as hard, regardless of them raiding 3 hours a week less. We understand not everyone can raid into the late evening hours, but still aspire to be on a successful team.</p>
+
+								<p class="text-justify">Both teams will be raiding mythic.</p>
 								<br>
 								<h2 class="text-center">Interested? <a href="/contact/">Contact Us!</a></h2>
-							</p>
 						</div>
 					</div>
 					<div class="col-md-3 col-md-pull-6 col-sm-6 openings-container" id="mythic-openings-container">
 						<div class="table-responsive table-box">
-							<h1 class="text-center">Mythic Openings:</h1>
+							<h2 class="text-center">9 Hour<br>Openings:</h2>
 							<table class="table table-striped" id="mythic-table">
 							</table>
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6 openings-container" id="heroic-openings-container">
 						<div class="table-responsive table-box">
-							<h1 class="text-center">Heroic Openings:</h1>
+							<h2 class="text-center">6 Hour<br>Openings:</h2>
 							<table class="table table-striped" id="heroic-table">
 							</table>
 						</div>
