--- a/public_html/contact/index.html
+++ b/public_html/contact/index.html
@@ -36,19 +36,19 @@
 						<div class="row" id="contact-us-thumbnail-container">
 							<h1 class="text-center">Contact Us</h1>
 							<hr>
-							<div class="col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
+							<div class="col-lg-4 col-lg-offset-2 col-md-6 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
 								<div class="thumbnail contact-info-portrait">
 									<img class="guild-member-portrait" src="/images/raidteam/portrait_Eliyya.png">
 									<div class="contact-info-container hunter-bg-color">
 										<div class="contact-info-sub-container">
 											<div class="contact-name">Eliyya</div>
 											<div class="contact-rank">GM</div>
-											<div class="contact-realid">PrplMunkys#1442</div>
+											<div class="contact-realid">Kiddy#11330</div>
 										</div>
 									</div>
 								</div>
 							</div>
-							<div class="col-lg-4 col-lg-offset-2 col-md-6 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+							<div class="col-lg-4 col-md-6 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
 								<div class="thumbnail contact-info-portrait">
 									<img class="guild-member-portrait" src="/images/raidteam/portrait_J&#248;hansen.png">
 									<div class="contact-info-container paladin-bg-color">
@@ -60,7 +60,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-lg-4 col-lg-offset-0 col-md-6 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+							<div class="col-lg-4 col-lg-offset-2 col-md-6 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
 								<div class="thumbnail contact-info-portrait">
 									<img class="guild-member-portrait" src="/images/raidteam/portrait_Carpath&#237;a.png">
 									<div class="contact-info-container rogue-bg-color">
@@ -68,18 +68,6 @@
 											<div class="contact-name">Carpath&#237;a</div>
 											<div class="contact-rank">Snuggle Butt</div>
 											<div class="contact-realid">NovemberRain#1436</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-lg-4 col-lg-offset-2 col-md-6 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-								<div class="thumbnail contact-info-portrait">
-									<img class="guild-member-portrait" src="/images/raidteam/portrait_Rockstarsyn.png">
-									<div class="contact-info-container hunter-bg-color">
-										<div class="contact-info-sub-container">
-											<div class="contact-name">Rockstarsyn</div>
-											<div class="contact-rank">Snuggle Butt</div>
-											<div class="contact-realid">Rockstarsyn#1216</div>
 										</div>
 									</div>
 								</div>
