Enhanced the schedules displayed on Join page

--- a/public_html/join/index.html
+++ b/public_html/join/index.html
@@ -35,13 +35,18 @@
 					<div class="col-md-6 col-md-push-3 col-sm-12" id="join-us-container">
 						<div class="text-box">
 							<h1 class="text-center">Join</h1>
-								<p>
-								<u>Raid Days & Times:</u><br>
-									<b>9 Hour</b><br>
-									Tuesday through Thursday from 6 - 9pm PST<br>
-									<b>6 Hour</b><br>
-									Tuesday through Thursday from 6 - 8pm PST<br>
-								</p><br>
+							<hr>
+								<div class="row" id="schedule-container">
+									<div class="text-center col-md-5">
+										<p><b>9 Hour Team</b></p>
+										<div class="schedule-times">Tuesday to Thursday from 6 - 9pm PST</div>
+									</div>
+									<div class="text-center col-md-5 col-md-offset-2">
+										<p><b>6 Hour Team</b></p>
+										<div class="schedule-times">Tuesday to Thursday from 6 - 8pm PST</div>
+									</div>
+								</div>
+
 								<p><u>Trial period:</u>&nbsp;&nbsp;2 weeks with 100% attendance.</p>
 
 								<p>Ideal candidates should meet these requirements:</p>
@@ -56,7 +61,7 @@
 
 								<p class="text-justify">While Fluffy Kitties just began semi-hardcore raiding during the middle of HFC, raiding only 6 hours a week, we would like to kick it up and start off stronger than ever for Legion.</p>
 
-								<p class="text-justify">The level of time and commitment you have to offer will determine which team you are better suited for.</p>
+								<p class="text-justify">The amount of time and level of commitment you have to offer will determine which team you are better suited for.</p>
 
 								<p class="text-justify">The 9 hour team will push harder and faster, while the 6 hour team will continue to push just as hard, regardless of them raiding 3 hours a week less. We understand not everyone can raid into the late evening hours, but still aspire to be on a successful team.</p>
 
