--- a/public_html/join/index.html
+++ b/public_html/join/index.html
@@ -47,7 +47,7 @@
 									</div>
 								</div>
 
-								<p><u>Trial period:</u>&nbsp;&nbsp;2 weeks with 100% attendance.</p>
+								<p class="text-center"><u>Trial period:</u>&nbsp;&nbsp;2 weeks with 100% attendance.</p>
 
 								<p>Ideal candidates should meet these requirements:</p>
 								<ul>
