--- a/public_html/raidteam/index.html
+++ b/public_html/raidteam/index.html
@@ -18,7 +18,7 @@
 					</div>
 					<div class="col-md-4 col-xs-12" id="guild-text-container">
 						<div id="guild-name">Fluffy Kitties</div>
-						<div id="guild-progress">Alliance Darkspear-US <span id="guild-progress-number"></span>/13M</div>
+						<div id="guild-progress">Alliance Darkspear-US <span id="guild-progress-number"></span></div>
 					</div>
 
 					<div class="col-md-6 col-xs-12" id="nav-container">
