Fixed guildprogress regex and updated Home

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -37,9 +37,11 @@
 						<div class="text-box">
 							<h1 class="text-center">About Us</h1>
 							<hr>
-							<p class="text-justify">Fluffy Kitties is a guild that was established in 2014 with hopes of giving both new and experienced players alike, a community where connections and lifelong friendships could be made.</p>
-							<p class="text-justify">Within the guild, Fluffy Kitties has established a semi-hardcore raiding team currently progressing through Mythic HFC and another team progressing through Heroic HFC.</p>
-							<p class="text-justify">So whether you're looking to make some new friends to grind achievements with, join our Mythic/Heroic raiding team, or even looking to form groups for some RBGS and CM dungeons, Fluffy Kitties welcomes you!</p>
+							<p class="text-justify">Fluffy Kitties is a guild that was established in 2014 with hopes of giving both new and experiences players alike, a community where connections and friendships could be made.</p>
+
+							<p class="text-justify">Within the guild, Fluffy Kitties has established a semi-hardcore Mythic raiding team that is currently working to conquer Legion after achieving great success in Warlords of Draenor.</p>
+
+							<p class="text-justify">So whether you're looking to make some new friends to grind achievements with, join our Mythic raiding team, or simply looking to knock some RBGs and Mythic+ dungeons with, Fluffy Kitties welcomes you!</p>
 						</div>
 					</div>
 					<div class="col-md-7 col-xs-12" id="about-us-image-container">
