Removed 6 Hour team from Join page

--- a/public_html/join/index.html
+++ b/public_html/join/index.html
@@ -32,55 +32,36 @@
 				</div>
 
 				<div class="row" id="content">
-					<div class="col-md-6 col-md-push-3 col-sm-12" id="join-us-container">
+					<div class="col-md-9 col-md-push-3 col-sm-8 col-sm-push-4 col-xs-12" id="join-us-container">
 						<div class="text-box">
 							<h1 class="text-center">Join</h1>
 							<hr>
-								<div class="row" id="schedule-container">
-									<div class="text-center col-md-5">
-										<p><b>9 Hour Team</b></p>
-										<div class="schedule-times">Tuesday to Thursday from 6 - 9pm PST</div>
-									</div>
-									<div class="text-center col-md-5 col-md-offset-2">
-										<p><b>6 Hour Team</b></p>
-										<div class="schedule-times">Tuesday to Thursday from 6 - 8pm PST</div>
-									</div>
-								</div>
+							<h3 class="text-center"><b>Tuesday to Thursday from 6 - 9pm PST</b></h3>
+							<br>
 
-								<p class="text-center"><u>Trial period:</u>&nbsp;&nbsp;2 weeks with 100% attendance.</p>
+							<p class="text-center">Fluffy Kitties is always looking for exceptional players to be a part of their raiding team. If you do not see your class listed as open, feel free to contact us for more information.</p>
+							<br><br>
 
-								<p>Ideal candidates should meet these requirements:</p>
-								<ul>
-									<li>Be able to obtain proper addons as well as understand how to use them.</li>
-									<li>Proper understanding of your class along with the ability to always try and improve.</li>
-									<li>Must have a positive attitude and ability to work with a team.</li>
-									<li>At least 90% attendance required during farm. During progression, several misses can result in your spot being filled.</li>
-									<li>Working mic and ability to use Mumble- client used for communicating during raids.</li>
-								</ul>
-								<h3 class="text-center"><b>Which team is best for you?</b></h3>
+							<p><b>Ideal candidates should meet these requirements:</b></p>
+							<ul>
+								<li>Be able to obtain proper addons as well as understand how to use them.</li>
+								<li>Proper understanding of your class along with the ability to always try and improve.</li>
+								<li>Must have a positive attitude and ability to work with a team.</li>
+								<li>At least 90% attendance required during farm. During progression, several misses can result in your spot being filled.</li>
+								<li>Working mic and ability to use Mumble- client used for communicating during raids.</li>
+							</ul>
 
-								<p class="text-justify">While Fluffy Kitties just began semi-hardcore raiding during the middle of HFC, raiding only 6 hours a week, we would like to kick it up and start off stronger than ever for Legion.</p>
+							<br>
+							<p class="text-center"><u>Trial period:</u>&nbsp;&nbsp;2 weeks with 100% attendance.</p>
 
-								<p class="text-justify">The amount of time and level of commitment you have to offer will determine which team you are better suited for.</p>
-
-								<p class="text-justify">The 9 hour team will push harder and faster, while the 6 hour team will continue to push just as hard, regardless of them raiding 3 hours a week less. We understand not everyone can raid into the late evening hours, but still aspire to be on a successful team.</p>
-
-								<p class="text-justify">Both teams will be raiding mythic.</p>
-								<br>
-								<h2 class="text-center">Interested? <a href="/contact/">Contact Us!</a></h2>
+							<br>
+							<h2 class="text-center">Interested? <a href="/contact/">Contact Us!</a></h2>
 						</div>
 					</div>
-					<div class="col-md-3 col-md-pull-6 col-sm-6 openings-container" id="mythic-openings-container">
+					<div class="col-md-3 col-md-pull-9 col-sm-4 col-sm-pull-8 col-xs-12 openings-container" id="mythic-openings-container">
 						<div class="table-responsive table-box">
-							<h2 class="text-center">9 Hour<br>Openings:</h2>
+							<h2 class="text-center">Openings:</h2>
 							<table class="table table-striped" id="mythic-table">
-							</table>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-6 openings-container" id="heroic-openings-container">
-						<div class="table-responsive table-box">
-							<h2 class="text-center">6 Hour<br>Openings:</h2>
-							<table class="table table-striped" id="heroic-table">
 							</table>
 						</div>
 					</div>
